--- a/styles/sass/_layout.scss
+++ b/styles/sass/_layout.scss
@@ -183,6 +183,9 @@
 .margin--top-bottom-four-spaces {
   margin: $space * 4 0;
 }
+.margin--top-bottom-six-spaces {
+  margin: $space * 6 0;
+}
 
 .margin--top-half-space {
   margin-top: $space / 2;
@@ -410,17 +413,40 @@
   width: 600px;
 
   // gradient to hide edges
+  // &:after {
+  //   content: '';
+  //   width: 80px;
+  //   height: 100%;
+  //   position: absolute;
+  //   right: 0;
+  //   top: 0;
+  //   background: -moz-linear-gradient(left, rgba(17,17,17,0) 0%, rgba(17,17,17,1) 60%);
+  //   background: -webkit-linear-gradient(left, rgba(17,17,17,0) 0%,rgba(17,17,17,1) 60%);
+  //   background: linear-gradient(to right, rgba(17,17,17,0) 0%,rgba(17,17,17,1) 60%);
+  //   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#111111', endColorstr='#111111',GradientType=1 );
+  // }
+}
+
+.has-top-bottom-fade {
+  position: relative;
+  &:before,
   &:after {
     content: '';
-    width: 80px;
-    height: 100%;
+    width: 50%;
+    height: 150px;
     position: absolute;
-    right: 0;
-    top: 0;
-    background: -moz-linear-gradient(left, rgba(0,0,0,0) 0%, rgba(34,34,34,1) 60%);
-    background: -webkit-linear-gradient(left, rgba(0,0,0,0) 0%,rgba(34,34,34,1) 60%);
-    background: linear-gradient(to right, rgba(0,0,0,0) 0%,rgba(34,34,34,1) 60%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#222222',GradientType=1 );
+    top: -50px;
+    right: -120px;
+    background: #f00;
+    z-index: 100;
+    background: -moz-linear-gradient(top, rgba(17,17,17,1) 0%, rgba(17,17,17,1) 17%, rgba(17,17,17,0) 100%);
+    background: -webkit-linear-gradient(top, rgba(17,17,17,1) 0%,rgba(17,17,17,1) 17%,rgba(17,17,17,0) 100%);
+    background: linear-gradient(to bottom, rgba(17,17,17,1) 0%,rgba(17,17,17,1) 17%,rgba(17,17,17,0) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#111111', endColorstr='#111111',GradientType=0);
+  }
+  &:after {
+    top: calc(100% - 130px);
+    transform: rotate(180deg);
   }
 }
 
@@ -445,6 +471,9 @@ header[class^="header--"] {
     left: -160px;
     top: 45%;
   }
+}
+.header--no-margin {
+  margin-left: 0 !important;
 }
 
 // date from milestones
