removed multiple IDs for download buttons (not semantic). Unified download links classes for GA tracking

--- a/styles/style.css
+++ b/styles/style.css
@@ -1827,6 +1827,9 @@ nav a {
   padding: 5px;
   margin-left: 20px;
 }
+nav .button--download {
+  width: auto !important;
+}
 
 .columns--4 > * {
   width: 23.625%;
